7. Векторная графика и оптимизация 20. Оптимизация графики на странице формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -236,9 +236,12 @@
           <span class="materials__lines-video-right"></span>
           <span class="materials__lines-video-left"></span>
           <picture>
-            <source type="image/svg+xml" media="(min-width: 1200px)" srcset="img/video-catalog-desktop-1x.jpg 1x, img/video-catalog-desktop-2x.jpg 2x">
-            <source type="image/svg+xml" media="(min-width: 768px)" srcset="img/video-catalog-tablet-1x.jpg 1x, img/video-catalog-tablet-2x.jpg 2x">
-            <img class="materials__video-pic" src="img/video-catalog-mobile-1x.jpg" srcset="img/video-catalog-mobile-2x.jpg 2x" alt="Пейзаж">
+            <source type="image/svg+xml" media="(min-width: 1200px)"
+              srcset="img/video-catalog-desktop-1x.jpg 1x, img/video-catalog-desktop-2x.jpg 2x">
+            <source type="image/svg+xml" media="(min-width: 768px)"
+              srcset="img/video-catalog-tablet-1x.jpg 1x, img/video-catalog-tablet-2x.jpg 2x">
+            <img class="materials__video-pic" src="img/video-catalog-mobile-1x.jpg"
+              srcset="img/video-catalog-mobile-2x.jpg 2x" alt="Пейзаж">
           </picture>
         </div>
         <div class="materials__player" tabindex="0">
