--- a/source/index.html
+++ b/source/index.html
@@ -266,7 +266,7 @@
             <p
               class="reasons__items-info reasons__items-info-add reasons__items-block-add-three reasons__items-block-add-three-info">
               ВСЕ интересные места находятся
-              очень близко
+              очень<br class="reasons__items-block-add-three-info-br"> близко
             </p>
           </div>
         </div>
@@ -285,8 +285,8 @@
             </h4>
             <p
               class="reasons__items-info reasons__items-info-add reasons__items-info-road reasons__items-block-add-four">
-              ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА
-              совсем НЕ СКУЧНО!
+              ЕХАТЬ В СЕДОНУ ИЗ<br class="reasons__items-info-road-br"> ЛАС-ВЕГАСА
+              совсем <br class="reasons__items-block-add-three-info-br"> НЕ СКУЧНО!
             </p>
           </div>
         </div>
@@ -331,11 +331,10 @@
           предложения гостиниц в седоне
         </p>
       </div>
-      <button class="interesting__button" type="button">
-        <a class="interesting__button-link" href="#">
-          <span class="interesting__button-special">НАЙТИ гостиницу</span>
-        </a>
-      </button>
+      <form action="#">
+        <button class="interesting__button-link interesting__button interesting__button-special" type="submit">Найти
+          гостиницу</button>
+      </form>
     </section>
     <!-- ЗАИНТЕРЕСОВАЛИСЬ? end -->
 
@@ -362,8 +361,7 @@
 
       <iframe class="map__frame-empty map__frame-no-js map__frame"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d296176.4782430216!2d-111.86903744940204!3d34.89845107057831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDQ3JzQ0LjIiTiAxMTHCsDM2JzQ0LjIiVw!5e0!3m2!1sru!2sru!4v1610360038884!5m2!1sru!2sru"
-        width="100%" height="357" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-        tabindex="0"></iframe>
+        allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
     <!-- Карта end -->
   </main>
